--- a/GitBackupKeeper/App.xaml
+++ b/GitBackupKeeper/App.xaml
@@ -1,9 +1,11 @@
 ﻿<Application x:Class="GitBackupKeeper.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GitBackupKeeper"
+             xmlns:local="clr-namespace:GitBackupKeeper"      
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type local:Settings}">
+            <local:SettingsView />
+        </DataTemplate>
     </Application.Resources>
 </Application>
