--- a/GitBackupKeeper/SettingsView.xaml
+++ b/GitBackupKeeper/SettingsView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GitBackupKeeper"
         xmlns:localHelper="clr-namespace:GitBackupKeeper.Helper"
         mc:Ignorable="d">
-    <Grid>
+    <Grid Margin="0 0 10 0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -28,7 +28,7 @@
         <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding destinationPath, UpdateSourceTrigger=PropertyChanged}" />
         <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="4" Grid.ColumnSpan="2">
             <Button Width="80" Margin="0 0 10 0" Content="Save" Command="{Binding saveSettings}" />
-            <Button Width="80" Margin="10 0 10 0" Content="Cancel" Command="{Binding cancelSettings}" />
+            <Button Width="80" Margin="10 0 10 0" Content="Cancel" Command="{Binding cancelSettings}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
         </WrapPanel>
     </Grid>
 </UserControl>
