--- a/GitBackupKeeper/SettingsView.xaml
+++ b/GitBackupKeeper/SettingsView.xaml
@@ -23,11 +23,11 @@
         <Label Grid.Row="1" Grid.Column="0" Content="Username:" HorizontalAlignment="Right" />
         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding username, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="2" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" />
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding password, UpdateSourceTrigger=PropertyChanged}" />
+        <PasswordBox Grid.Row="2" Grid.Column="1" Name="passwordBox"/>
         <Label Grid.Row="3" Grid.Column="0" Content="Destination:" HorizontalAlignment="Right" />
         <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding destinationPath, UpdateSourceTrigger=PropertyChanged}" />
         <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="4" Grid.ColumnSpan="2">
-            <Button Width="80" Margin="0 0 10 0" Content="Save" Command="{Binding saveSettings}" />
+            <Button Width="80" Margin="0 0 10 0" Content="Save" Command="{Binding saveSettings}" CommandParameter="{Binding ElementName=passwordBox}" />
             <Button Width="80" Margin="10 0 10 0" Content="Cancel" Command="{Binding cancelSettings}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
         </WrapPanel>
     </Grid>
