--- a/GitBackupKeeper/SettingsView.xaml
+++ b/GitBackupKeeper/SettingsView.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -26,7 +27,8 @@
         <PasswordBox Grid.Row="2" Grid.Column="1" Name="passwordBox"/>
         <Label Grid.Row="3" Grid.Column="0" Content="Destination:" HorizontalAlignment="Right" />
         <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding destinationPath, UpdateSourceTrigger=PropertyChanged}" />
-        <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="4" Grid.ColumnSpan="2">
+        <CheckBox Grid.Row="4" Grid.Column="1" IsChecked="{Binding zipping}" VerticalAlignment="Center">Zip folders</CheckBox>
+        <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="5" Grid.ColumnSpan="2">
             <Button Width="80" Margin="0 0 10 0" Content="Save" Command="{Binding saveSettings}" CommandParameter="{Binding ElementName=passwordBox}" />
             <Button Width="80" Margin="10 0 10 0" Content="Cancel" Command="{Binding cancelSettings}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
         </WrapPanel>
