--- a/GitBackupKeeper/SettingsView.xaml
+++ b/GitBackupKeeper/SettingsView.xaml
@@ -5,32 +5,73 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GitBackupKeeper"
         xmlns:localHelper="clr-namespace:GitBackupKeeper.Helper"
+             MinWidth="250"
         mc:Ignorable="d">
-    <Grid Margin="0 0 10 0">
+    <Grid Margin="10 0 10 0" Grid.IsSharedSizeScope="True">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Server:" HorizontalAlignment="Right" />
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding serverUrl, UpdateSourceTrigger=PropertyChanged}" />
-        <Label Grid.Row="1" Grid.Column="0" Content="Username:" HorizontalAlignment="Right" />
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding username, UpdateSourceTrigger=PropertyChanged}" />
-        <Label Grid.Row="2" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" />
-        <PasswordBox Grid.Row="2" Grid.Column="1" Name="passwordBox"/>
-        <Label Grid.Row="3" Grid.Column="0" Content="Destination:" HorizontalAlignment="Right" />
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding destinationPath, UpdateSourceTrigger=PropertyChanged}" />
-        <CheckBox Grid.Row="4" Grid.Column="1" IsChecked="{Binding zipping}" VerticalAlignment="Center">Zip folders</CheckBox>
-        <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="5" Grid.ColumnSpan="2">
+        <GroupBox Grid.Row="0" Header="Git">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="titles" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Content="Server:" HorizontalAlignment="Right" />
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding serverUrl, UpdateSourceTrigger=PropertyChanged}" />
+                <Label Grid.Row="1" Grid.Column="0" Content="Username:" HorizontalAlignment="Right" />
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding username, UpdateSourceTrigger=PropertyChanged}" />
+                <Label Grid.Row="2" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" />
+                <PasswordBox Grid.Row="2" Grid.Column="1" Name="passwordBox"/>
+                <Label Grid.Row="3" Grid.Column="0" Content="Destination:" HorizontalAlignment="Right" />
+                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding destinationPath, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+        </GroupBox>
+        <GroupBox Grid.Row="1">
+            <GroupBox.Header>
+                <CheckBox Grid.Column="1" IsChecked="{Binding useWebDav}" VerticalAlignment="Center">Upload to WebDAV</CheckBox>
+            </GroupBox.Header>
+            <Grid IsEnabled="{Binding useWebDav}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="titles" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Content="Server:" HorizontalAlignment="Right" />
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding webDavServerUrl, UpdateSourceTrigger=PropertyChanged}" />
+                <Label Grid.Row="1" Grid.Column="0" Content="Base path:" HorizontalAlignment="Right" />
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding webDavBasePath, UpdateSourceTrigger=PropertyChanged}" />
+                <Label Grid.Row="2" Grid.Column="0" Content="Username:" HorizontalAlignment="Right" />
+                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding webDavUsername, UpdateSourceTrigger=PropertyChanged}" />
+                <Label Grid.Row="3" Grid.Column="0" Content="Password:" HorizontalAlignment="Right" />
+                <PasswordBox Grid.Row="3" Grid.Column="1" Name="webDavPasswordBox"/>
+            </Grid>
+        </GroupBox>
+        <CheckBox Grid.Row="2" IsChecked="{Binding zipping}" VerticalAlignment="Center">Zip folders</CheckBox>
+            <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="3">
             <Button Width="80" Margin="0 0 10 0" Content="Save" Command="{Binding saveSettings}" CommandParameter="{Binding ElementName=passwordBox}" />
-            <Button Width="80" Margin="10 0 10 0" Content="Cancel" Command="{Binding cancelSettings}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+            <Button Width="80" Margin="10 0 0 0" Content="Cancel" Command="{Binding cancelSettings}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
         </WrapPanel>
     </Grid>
 </UserControl>
