--- a/GitBackupKeeper/SettingsView.xaml
+++ b/GitBackupKeeper/SettingsView.xaml
@@ -68,7 +68,31 @@
                 <PasswordBox Grid.Row="3" Grid.Column="1" Name="webDavPasswordBox"/>
             </Grid>
         </GroupBox>
-        <CheckBox Grid.Row="2" IsChecked="{Binding zipping}" VerticalAlignment="Center">Zip folders</CheckBox>
+        <GroupBox Grid.Row="2">
+            <GroupBox.Header>
+                <CheckBox Grid.Column="1" IsChecked="{Binding zipping}" VerticalAlignment="Center">Zip folders</CheckBox>
+            </GroupBox.Header>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="titles" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="{Binding encryptZipFile}" VerticalAlignment="Center">Encrypt with AES-256</CheckBox>
+                <Label Grid.Row="1" IsEnabled="{Binding encryptZipFile}" Grid.Column="0" Content="Zip password:" HorizontalAlignment="Right" />
+                <Grid Grid.Row="1" IsEnabled="{Binding encryptZipFile}" Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBox Grid.Column="0" IsEnabled="{Binding encryptZipFile}" Text="{Binding encryptionPassword, UpdateSourceTrigger=PropertyChanged}" />
+                    <Button Grid.Column="1" Command="{Binding generateZipPassword}" Margin="5 0 5 0" Padding="3">Generate...</Button>
+                </Grid>
+            </Grid>
+        </GroupBox>
             <WrapPanel Margin="0 10 0 0" HorizontalAlignment="Right" Grid.Row="3">
             <Button Width="80" Margin="0 0 10 0" Content="Save" Command="{Binding saveSettings}" CommandParameter="{Binding ElementName=passwordBox}" />
             <Button Width="80" Margin="10 0 0 0" Content="Cancel" Command="{Binding cancelSettings}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
